flux/apps/hoyeslab/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/instance: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/instance: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.20
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: sonarr-config
            - mountPath: /data
              name: media
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          livenessProbe:
            initialDelaySeconds: 10
            tcpSocket:
              port: http
          readinessProbe:
            initialDelaySeconds: 10
            tcpSocket:
              port: http

      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        # Mount the entire media share so sonarr can hard link
        # from /data/torrents/ to /data/media/tv/
        - name: media
          persistentVolumeClaim:
            claimName: media
