flux/apps/hoyeslab/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: sonarr.hoyes.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  name: http
  tls:
    - hosts:
        - sonarr.hoyes.dev
      secretName: hoyes-dev-tls
